Prevent coordinate transformation when targeting the root RWHV

In some cases, an input event being targeted to the root RWHV was going
through coordinate transformation, while in other cases it was not.
This is normally fine because it is the identity transform anyway, but
it can result in rounding error when there is a non-integer device
scale factor. This was noted to cause a bug related to selections not
being cleared because of coordinates from a transformed (rounded)
event being compared against coordinates from a non-tranformed
(unrounded) input event.

This CL prevents transformation in all cases when the root is being
targeted and the event is already in the coordinate space of the root.

BUG=670253
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_site_isolation

Review-Url: https://codereview.chromium.org/2567093003
Cr-Commit-Position: refs/heads/master@{#438012}

Former-commit-id: e3a974bb76247be74aaed25df318cdffce664ff5